--- a/OptionalAutomation/readme
+++ b/OptionalAutomation/readme
@@ -1,18 +1,54 @@
 Optional Automation
-These scripts can be used to quickly create quake 3 VM servers. 
-
-The following will need to be uploaded to cloud storage
-1. cfg files
-2. pak files
-3. scripts
-
-The scripts will then need to be uploaded to the /home/quake3/ directory from cloud storage using the gsutil cp command (gsutil cp gs://<bucket path> /home/quake3
+This is for the quick creation of quake 3 servers in GCP.
 
 
-At this time, the only things not automated are
-  1. Creating the password for root
-  2. Creating the quake3 user and password
-  3. Starting screen
-  4. Creating firewall rules
-  
-For the above, refer to the creation process file.
+1. Using GCP console, create bucket and place the following inside: 
+   paks 0-8, autoexec.cfg, server.cfg, levels.cfg, bots.cfg, vmstartup.sh, instancecreation.sh, q3serverstart.sh, files.sh
+
+2. Copy instancecreation.sh from cloud storage to cloud shell. Give it execute permissions and run it
+       gsutil cp gs://<bucket path> <cloud shell path>
+       chmod +x instancecreation.sh
+      ./instancreation.sh
+      (This should create the instance template and instance. It will also run startup scripts to update linux, install screen, and the ioq3-server package.)
+      (If the template already exists, you will receive an error stating such. The second command to create the instance will still be successful if the 
+      VM name specified is not the same as any existin VM's in GCP.)
+    
+    **** Need to figure out how to get the script to ask the user to enter a name for the VM. Currently you need to edit the script to change the vm name.
+    
+3. Create firewall using GCP console
+      Target tag: quake-server (Using this tag assigns it to the vm instance)
+      Protocols/ports: Quake3 uses udp 27960
+      Source ip ranges: 0.0.0.0/0 (Anyone can connect)
+    
+4. SSH into VM and create password for root 
+      sudo passwd
+
+5. Create quake 3 user and password (must be root)
+      useradd -m -g users -d /home/quake3 -s /bin/bash quake3
+      passwd quake3
+      
+6. Switch to quake3 user and run server
+      su - quake3
+      /usr/lib/ioquake3/ioq3ded
+      (The server will not run because the game files are missing but directories will still be made)
+      
+7. Copy files.sh from cloud storage to vm. Give execute permissions to script
+      gsutil cp gs://quake3files/scripts/files.sh /home/quake3
+      chmod +x files.sh
+ 
+8. Run files.sh
+      ./files.sh
+      (This will copy game files and cfg's from cloud storage to proper directories.)
+       
+9. Run server (as quake3 user)
+      SSH into VM
+      Start screen session: screen -D -R
+      Change user: su - quake3
+      Start server: ./q3serverstart
+      
+      
+   Extra screen commands:
+   	Find out session id (screen -ls)
+	Reconnect to screen (screen -r <session id>
+	Terminate screen screen -X -S <session id> quit
+	Detach from screen (ctrl-a + ctrl-d)
